<resources>
    <string name="app_name">QuizApp</string>
    <string name="about">ABOUT</string>
    <string name="start">START</string>
    <string name="editTextName">Enter your name</string>
    <string name="dName">Divyesh Kuchhadia</string>
    <string name="vName">Vimal Parmar</string>
    <string name="dEmail">divyeshkuchhadia@gamil.com</string>
    <string name="vEmail">vimalparmar@gamil.com</string>
    <string name="developer">Developer</string>
    <string name="back">Back</string>
    <string name="nq">Next Question</string>
    <string name="quit">Quit</string>
    <string name="yscore">Your Score</string>
    <string name="restart">Restart</string>
</resources>